# flet_GUI_builder

./: pyproject.toml
src/flet_gui_builder/: validated_textfield.py
